# sdg_661_analysis_and_reporting

./: .gitignore  CHANGELOG.md  Colab_Guide.md  README.md  UK_reporting.ipynb  gswe_versions.cfg  pyproject.toml  requirements.txt  water_extent_by_basin_by_year.csv  water_extent_change.csv  water_type_w_total.csv
GSWE_reporting/: GEE_extractor.py  __init__.py  calculate_water_extent.py
boundaries/: Countries_December_2018_Boundaries_UK_BFC.dbf  Countries_December_2018_Boundaries_UK_BFC.shx  Countries_December_2018_Boundaries_UK_BFC.xml  hybas_eu_lev07_v1c.dbf  hybas_eu_lev07_v1c.sbn  hybas_eu_lev07_v1c.sbx  hybas_eu_lev07_v1c.shx
vega/: UK_hydrobasin_lvl6_WGS.geojson
vega/data/: ephemeral.json  permanent.json  seasonal.json
vega/vega_config/: ephemeral_vega.json  permanent_vega.json  seasonal_vega.json
