[tool.poetry]
name = "sdg_661_reporting"
version = "0.1.0"
description = ""
authors = ["DataScienceCampus <datasciencecampus@ons.gov.uk>"]

[tool.poetry.dependencies]
python = "^3.7"
earthengine-api = "0.1.214"
numpy = "1.18.1"
pandas = "1.0.3"
geopandas = "0.7.0"
rasterio = "1.1.3"
shapely = "1.7.0"
altair = "^4.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
